# blackclap_backend

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  LOCAL_DEVELOPMENT.md  README.md  docker-compose.yml  pyproject.toml  rules.md
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 1e01684aaea7_add_follows_table.py  a1b2c3d4e5f6_create_posts_and_post_media_tables.py  a2b3c4d5e6f7_add_comments_composite_index.py  a8b9c0d1e2f3_add_post_views.py  b2c3d4e5f6a7_add_thumbnail_url_to_post_media.py  b7c8d9e0f1a2_create_chat_tables.py  c3d4e5f6a7b8_add_post_likes_and_comments.py  c9d0e1f2a3b4_add_blocks_and_reports.py  d1e2f3a4b5c6_add_refresh_tokens.py  d4e5f6a7b8c9_add_post_saves.py  e1f2a3b4c5d6_add_search_indexes.py  e2f3a4b5c6d7_add_device_tokens.py  f6cb4894f8e5_create_users_table.py  f7a8b9c0d1e2_add_post_tags.py
app/: main.py
app/core/cache/: redis_cache.py
app/core/config/: settings.py
app/core/database/: session.py
app/core/email/: __init__.py  sender.py  templates.py
app/core/push/: fcm.py
app/core/security/: auth.py  jwt.py  otp.py  password.py
app/core/storage/: azure.py
app/core/websocket/: auth.py  events.py  manager.py  pubsub.py
app/modules/account/: router.py  service.py
app/modules/auth/: models.py  router.py  schemas.py  service.py
app/modules/chat/: models.py  router.py  schemas.py  service.py
app/modules/comments/: models.py  router.py  schemas.py  service.py
app/modules/follows/: models.py  router.py  schemas.py
app/modules/likes/: models.py  router.py  schemas.py  service.py
app/modules/media/: router.py  schemas.py
app/workers/: celery_app.py
blackclap_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: auth_flow.md  image_upload.md  profile_flow.md
readme/: database.md  image_upload.md  local_dev.md  production.md
scripts/: start_services.py
(+33 files in other folders)
