[project]
name = "blackclap-backend"
version = "0.1.0"
description = "BlackClap startup-focused social media backend"
authors = [
    {name = "Kuldeep Rathor"}
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pydantic[email]",
    "pydantic-settings",
    "boto3",
    "celery",
    "redis",
    "python-dotenv",
    "structlog",
    "pyjwt",
    "bcrypt",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["app", "app.*"]

