[project]
name = "blackclap-backend"
version = "0.1.0"
description = "BlackClap startup-focused social media backend"
authors = [
    {name = "Kuldeep Rathor"}
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pydantic[email]",
    "pydantic-settings",
    "azure-storage-blob",
    "celery",
    "redis",
    "python-dotenv",
    "structlog",
    "pyjwt",
    "bcrypt",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "pre-commit",
]

[tool.ruff]
line-length = 88
exclude = [
    "alembic",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "alembic", "scripts"]

[tool.setuptools.packages.find]
include = ["app", "app.*"]
